Closed Bug 629242 Opened 15 years ago Closed 15 years ago

js/jsd/jsdebug.c:584:5: warning: implicit declaration of function 'jsd_EnableSingleStepInterrupts'

Categories

(Core :: JavaScript Engine, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: dholbert, Assigned: sfink)

References

Details

(Whiteboard: [fixed-in-tracemonkey])

Attachments

(1 file)

Filing bug on this build warning > js/jsd/jsdebug.c: In function 'JSD_EnableSingleStepInterrupts': > js/jsd/jsdebug.c:584:5: warning: implicit declaration of function 'jsd_EnableSingleStepInterrupts' Flagged code: > 579 JSD_PUBLIC_API(JSBool) > 580 JSD_EnableSingleStepInterrupts(JSDContext* jsdc, JSDScript* jsdscript, JSBool enable) > 581 { > 582 JSD_ASSERT_VALID_CONTEXT(jsdc); > 583 JSD_ASSERT_VALID_SCRIPT(jsdscript); > 584 return jsd_EnableSingleStepInterrupts(jsdc, jsdscript, enable); > 585 } From a quick MXR search[1], it looks like the undeclared function lives in jsd_scpt.c: > 594 JSBool > 595 jsd_EnableSingleStepInterrupts(JSDContext* jsdc, JSDScript* jsdscript, JSBool enable) > 596 { http://mxr.mozilla.org/mozilla-central/source/js/jsd/jsd_scpt.c#595 This function probably wants to be declared in jsd.h. [1] http://mxr.mozilla.org/mozilla-central/search?string=jsd_EnableSingleStepInterrupts&case=on&find=&findi=&filter=^[^\0]*%24&hitlimit=&tree=mozilla-central
Whiteboard: [build_warning]
Declare it, and also propagate error returns. Guess I should get a rubber stamp for the latter.
Assignee: general → sphink
Attachment #509144 - Flags: review?(dmandelin)
Attachment #509144 - Flags: review?(dmandelin) → review+
Whiteboard: [build_warning] → [fixed-in-tracemonkey]
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: