Bug 629242 - Declare, error check for EnableSingleStepInterrupts (r=dmandelin)